GearsetPOC/force-app/main/default/objects/SalesforceMembershipPeriodHistory__x/SalesforceMembershipPeriodHistory__x.object-meta.xml
<CustomObject>
    <description>SalesforceMembershipPeriodHistory</description>
    <externalDataSource>ICLP</externalDataSource>
    <externalName>SalesforceMembershipPeriodHistory</externalName>
    <label>SalesforceMembershipPeriodHistory</label>
    <pluralLabel>SalesforceMembershipPeriodHistory</pluralLabel>
</CustomObject>