GearsetPOC/force-app/main/default/objects/SalesforceMembershipPeriodHistory__x/fields/RewardPointsEarned__c.field-meta.xml
<CustomField>
    <fullName>RewardPointsEarned__c</fullName>
    <externalDeveloperName>RewardPointsEarned</externalDeveloperName>
    <label>Reward points earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>