GearsetPOC/force-app/main/default/objects/SalesforceMembershipPeriodHistory__x/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>StartDate</description>
    <externalDeveloperName>StartDate</externalDeveloperName>
    <label>Start date</label>
    <type>DateTime</type>
</CustomField>