GearsetPOC/force-app/main/default/objects/SalesforceMembershipPeriodHistory__x/fields/StatusPointsEarned__c.field-meta.xml
<CustomField>
    <fullName>StatusPointsEarned__c</fullName>
    <description>StatusPointsEarned</description>
    <externalDeveloperName>StatusPointsEarned</externalDeveloperName>
    <label>Status points earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>