GearsetPOC/force-app/main/default/objects/SalesforceMembershipPeriodHistory__x/fields/TripsTaken__c.field-meta.xml
<CustomField>
    <fullName>TripsTaken__c</fullName>
    <description>TripsTaken</description>
    <externalDeveloperName>TripsTaken</externalDeveloperName>
    <label>Trips taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>